--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "start": "npm run dev & php artisan serve"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.7",
