--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "alpinejs": "^3.14.9"
+        "alpinejs": "^3.14.9",
+        "laravel-echo": "^2.1.4",
+        "pusher-js": "^8.4.0"
     }
 }
